tests/profile/error/property/wrongtype_value.profile
{
  "version": { "major": 12, "minor": 13 },
  "properties": [
    {
      "type": "setPropertyValue",
      "name": "property_name_1",
      "value": 1.0
    }
  ]
}
